# halo2wrong

ecc/src/: base_field_ecc.rs  general_ecc.rs
ecc/src/base_field_ecc/: add.rs  mul.rs
ecc/src/general_ecc/: add.rs  mul.rs
ecdsa/src/: ecdsa.rs
halo2wrong/: Cargo.toml
halo2wrong/src/: lib.rs  utils.rs
integer/src/: chip.rs  instructions.rs
integer/src/chip/: add.rs  assert_in_field.rs  assert_not_zero.rs  assert_zero.rs  assign.rs  div.rs  invert.rs  mul.rs  reduce.rs  square.rs
maingate/src/: instructions.rs  main_gate.rs  range.rs
transcript/src/: hasher.rs  transcript.rs
